# Terra-Puls

./: README.md
terra-pulse/: .env.example  .gitignore  CLAUDE.md  PLAN.md  docker-compose.yml  setup.sh
terra-pulse/backend/: .coverage  .env.example  Dockerfile  Makefile  celerybeat-schedule  pyproject.toml
terra-pulse/backend/app/: config.py  main.py
terra-pulse/backend/app/api/v1/: countries.py  news.py  pulse.py  router.py  status.py
terra-pulse/backend/app/db/: session.py
terra-pulse/backend/app/models/: country.py  news.py  pulse.py
terra-pulse/backend/app/scoring/: pulse_engine.py
terra-pulse/backend/app/services/: api_status.py  gdelt.py  rest_countries.py  worldnews.py
terra-pulse/backend/app/tasks/: celery_app.py  fetch_pulse.py
terra-pulse/backend/tests/: conftest.py  test_FAIL_demo_api.py  test_FAIL_demo_scoring.py  test_FAIL_demo_services.py  test_countries_api.py  test_docker_integration.py  test_gdelt_service.py  test_health.py  test_news_api.py  test_pulse_api.py  test_pulse_engine.py  test_rest_countries_service.py  test_status_api.py  test_worldnews_service.py
terra-pulse/frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
terra-pulse/frontend/composables/: useColorScale.ts  usePulse.ts
terra-pulse/frontend/pages/: index.vue
terra-pulse/frontend/public/: download-geojson.sh
terra-pulse/frontend/stores/: countries.ts  pulse.ts  ui.ts
terra-pulse/frontend/tests/: debug.spec.ts  debug2.spec.ts  globe.spec.ts  (+1 more)
terra-pulse/scripts/: validate_docker.sh
(+7 files in other folders)
